--- a/scss/main.css
+++ b/scss/main.css
@@ -53,7 +53,8 @@ h1 {
 }
 
 .todo-container {
-  width: 20%;
+  width: 80%;
+  max-width: 400px;
 }
 
 input {
@@ -182,6 +183,12 @@ li .delete-icon:active {
 }
 li:first-child {
   margin-top: 20px;
+}
+
+.separator {
+  height: 1px;
+  background: #474747;
+  margin: 20px 0;
 }
 
 h1 {
