--- a/scss/main.scss
+++ b/scss/main.scss
@@ -55,7 +55,8 @@ h1 {
 }
 
 .todo-container {
-    width: 20%;
+    width: 80%;
+    max-width: 400px;
 }
 
 input {
@@ -200,6 +201,12 @@ li {
     &:first-child {
         margin-top: 20px;
     }
+}
+
+.separator {
+    height: 1px;
+    background: #474747;
+    margin: 20px 0;
 }
 
 h1 {
