--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,7 +11,7 @@ body {
     background-color: #000000;
     color: #333;
     line-height: 1.6;
-    font-size: 16px;
+    font-size: 14px;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -130,13 +130,11 @@ button {
 }
 
 li {
-    border: 1.5px solid #474747;
-    background: #151515;
+    background-color: rgba(217, 217, 217, 0.05);
     border-radius: 7px;
     display: flex;
     align-items: center;
     padding: 10px 20px;
-    margin: 10px 0;
     width: 100%;
     color: #fff;
     position: relative;
@@ -145,40 +143,29 @@ li {
         position: absolute;
         display: flex;
         right: 15px;
+        align-items: center;
+    }
 
-        .checkbox-container {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-right: 10px;
+    .checkmark {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: rgba(217, 217, 217, 0.05);
+        margin: 0 10px 0 0;
+        font-size: 24px;
+        color: transparent;
+        border-radius: 50%;
+        padding: 5px;
+        transition: all 0.1s ease-in-out;
+        cursor: pointer;
+        position: relative;
 
-            input[type="checkbox"] {
-                appearance: none;
-                width: 24px;
-                height: 24px;
-                
-                background: rgba(217, 217, 217, 0.1);
-                border-radius: 50%;
-                position: relative;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                transition: all 0.1s ease-in-out;
+        &:hover {
+            background: rgba(217, 217, 217, 0.1);
+        }
 
-                &:checked + .checkmark {
-                    opacity: 1;
-                }
-            }
-
-            .checkmark {
-                position: absolute;
-                pointer-events: none;
-                font-size: 24px;
-
-                &:hover {
-                    background: rgba(217, 217, 217, 0.05);
-                }
-            }
+        &:active {
+            background: rgba(217, 217, 217, 0.2);
         }
     }
 
@@ -201,12 +188,14 @@ li {
     &:first-child {
         margin-top: 20px;
     }
-}
 
-.separator {
-    height: 1px;
-    background: #474747;
-    margin: 20px 0;
+    &:last-child {
+        margin-bottom: 20px;
+    }
+
+    &:nth-child(n+2) {
+        margin-top: 10px;
+    }
 }
 
 h1 {
