--- a/scss/main.css
+++ b/scss/main.css
@@ -7,10 +7,10 @@
 }
 
 body {
-  background-color: #000000;
-  color: white;
+  background-color: #000;
+  color: #fff;
   line-height: 1.6;
-  font-size: 14px;
+  font-size: 1rem;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -52,39 +52,39 @@ h1 {
   align-items: center;
   justify-content: center;
   margin: 10px 0;
-  border: 1px solid #474747;
+  max-width: 350px;
+  width: 100%;
+  border: 1px solid rgb(71, 71, 71);
   background: none;
   border-radius: 30px;
   transition: all 0.1s ease-in-out;
   position: relative;
 }
 .input-container:hover {
-  background: rgba(217, 217, 217, 0.05);
+  background-color: rgba(71, 71, 71, 0.1);
 }
-
-input {
+.input-container input {
   border: none;
   padding: 10px 20px;
   background: none;
   color: #fff;
   outline: none;
   width: 100%;
-  font-size: 16px;
+  font-size: 1rem;
 }
-
-#add-task {
+.input-container #add-task {
   position: absolute;
   right: 15px;
-  font-size: 24px;
+  font-size: 1.5rem;
   padding: 5px;
   transition: all 0.1s ease-in-out;
   border-radius: 50%;
 }
-#add-task:hover {
+.input-container #add-task:hover {
   cursor: pointer;
   background: rgba(217, 217, 217, 0.1);
 }
-#add-task:active {
+.input-container #add-task:active {
   background: rgba(217, 217, 217, 0.2);
 }
 
@@ -94,7 +94,7 @@ input {
   opacity: 0;
   transition: opacity 0.5s ease;
   pointer-events: none;
-  border: 1px solid #474747;
+  border: 1px solid rgb(71, 71, 71);
   background: none;
   color: #fff;
   cursor: pointer;
@@ -110,7 +110,7 @@ input {
   pointer-events: auto;
 }
 .removeAllButton:hover {
-  background: rgba(217, 217, 217, 0.05);
+  background: rgba(71, 71, 71, 0.1);
 }
 .removeAllButton:hover::after {
   opacity: 0.1;
@@ -125,14 +125,11 @@ input {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(0deg, rgb(255, 17, 17) 0%, rgba(255, 215, 0, 0) 60%);
+  background: linear-gradient(0deg, rgb(255, 17, 17), rgba(255, 215, 0, 0));
   opacity: 0;
   border-radius: 30px;
   z-index: -1;
   transition: all 0.5s ease-in-out;
-}
-.removeAllButton#add-task {
-  background-color: rgba(0, 136, 255, 0.09);
 }
 
 .task-list {
@@ -142,7 +139,7 @@ input {
   max-height: 500px;
 }
 .task-list li {
-  background-color: rgba(217, 217, 217, 0.05);
+  background-color: rgba(217, 217, 217, 0.1);
   border-radius: 7px;
   display: flex;
   align-items: center;
@@ -158,25 +155,27 @@ input {
   opacity: 1;
   transform: translateY(0);
 }
+.task-list li .task-controls,
+.task-list li .checkmark,
+.task-list li .delete-icon {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .task-list li .task-controls {
   position: absolute;
-  display: flex;
   right: 15px;
-  align-items: center;
 }
 .task-list li .checkmark {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background: rgba(217, 217, 217, 0.05);
   margin: 0 10px 0 0;
-  font-size: 24px;
+  font-size: 1.5rem;
   color: transparent;
   border-radius: 50%;
   padding: 5px;
   transition: all 0.1s ease-in-out;
   cursor: pointer;
-  position: relative;
 }
 .task-list li .checkmark:hover {
   background: rgba(217, 217, 217, 0.1);
@@ -185,7 +184,7 @@ input {
   background: rgba(217, 217, 217, 0.2);
 }
 .task-list li .delete-icon {
-  font-size: 24px;
+  font-size: 1.5rem;
   padding: 5px;
   transition: all 0.1s ease-in-out;
   border-radius: 50%;
