--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,14 @@
- @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+$black: #000;
+$white: #fff;
+$light: rgba(255, 255, 255, 0.3);
+$light-hover: rgba(255, 255, 255, 0.5);
+$gray-light: rgba(217, 217, 217, 0.05);
+$gray-light-hover: rgba(217, 217, 217, 0.1);
+$gray-light-active: rgba(217, 217, 217, 0.2);
+$gray-dark: rgba(71, 71, 71, 1);
+$gray-dark-hover: rgba(71, 71, 71, 0.1);
 
 * {
     box-sizing: border-box;
@@ -8,10 +18,10 @@
 }
 
 body {
-    background-color: #000000;
-    color: white;
+    background-color: $black;
+    color: $white;
     line-height: 1.6;
-    font-size: 14px;
+    font-size: 1rem;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -25,12 +35,12 @@ body {
 
 .credits {
     text-decoration: none;
-    color: rgba(255, 255, 255, 0.3);
+    color: $light;
     transition: all 0.1s ease-in-out;
     font-weight: 300;
 
     &:hover {
-        color: rgba(255, 255, 255, 0.5);
+        color: $light-hover;
     }
 }
 
@@ -54,42 +64,44 @@ h1 {
     align-items: center;
     justify-content: center;
     margin: 10px 0;
-    border: 1px solid #474747;
+    max-width: 350px;
+    width: 100%;
+    border: 1px solid $gray-dark;
     background: none;
     border-radius: 30px;
     transition: all 0.1s ease-in-out;
     position: relative;
 
     &:hover {
-        background: rgba(217, 217, 217, 0.05);
-    }
-}
-
-input {
-    border: none;
-    padding: 10px 20px;
-    background: none;
-    color: #fff;
-    outline: none;
-    width: 100%;
-    font-size: 16px;
-}
-
-#add-task {
-    position: absolute;
-    right: 15px;
-    font-size: 24px;
-    padding: 5px;
-    transition: all 0.1s ease-in-out;
-    border-radius: 50%;
-
-    &:hover {
-        cursor: pointer;
-        background: rgba(217, 217, 217, 0.1);
+        background-color: $gray-dark-hover;
     }
 
-    &:active {
-        background: rgba(217, 217, 217, 0.2);
+    input {
+        border: none;
+        padding: 10px 20px;
+        background: none;
+        color: $white;
+        outline: none;
+        width: 100%;
+        font-size: 1rem;
+    }
+
+    #add-task {
+        position: absolute;
+        right: 15px;
+        font-size: 1.5rem;
+        padding: 5px;
+        transition: all 0.1s ease-in-out;
+        border-radius: 50%;
+
+        &:hover {
+            cursor: pointer;
+            background: $gray-light-hover;
+        }
+
+        &:active {
+            background: $gray-light-active;
+        }
     }
 }
 
@@ -99,15 +111,18 @@ input {
     opacity: 0;
     transition: opacity 0.5s ease;
     pointer-events: none;
-    border: 1px solid #474747;
+    border: 1px solid $gray-dark;
     background: none;
-    color: #fff;
+    color: $white;
     cursor: pointer;
     border-radius: 30px;
     outline: none;
     transition: all 0.2s ease-in-out;
     position: relative;
     transform: scale(0.95);
+
+    $gradient-color: rgba(255, 17, 17, 1);
+    $gradient-transparent: rgba(255, 215, 0, 0);
 
     &.visible {
         opacity: 1;
@@ -116,7 +131,7 @@ input {
     }
 
     &:hover {
-        background: rgba(217, 217, 217, 0.05);
+        background: $gray-dark-hover;
 
         &::after {
             opacity: 0.1;
@@ -134,15 +149,11 @@ input {
         left: 0;
         width: 100%;
         height: 100%;
-        background: linear-gradient(0deg, rgba(255, 17, 17, 1) 0%, rgba(255, 215, 0, 0) 60%);
+        background: linear-gradient(0deg, $gradient-color, $gradient-transparent);
         opacity: 0;
         border-radius: 30px;
         z-index: -1;
         transition: all 0.5s ease-in-out;
-    }
-
-    &#add-task {
-        background-color: rgba($color: #0088ff, $alpha: 0.09);
     }
 }
 
@@ -153,72 +164,74 @@ input {
     max-height: 500px;
 
     li {
-        background-color: rgba(217, 217, 217, 0.05);
+        background-color: $gray-light-hover;
         border-radius: 7px;
         display: flex;
         align-items: center;
         padding: 10px 20px;
         width: 100%;
-        color: #fff;
+        color: $white;
         position: relative;
         transition: all 0.3s ease-in-out;
         opacity: 0;
         transform: translateY(-10px);
-    
+
         &.visible {
             opacity: 1;
             transform: translateY(0);
         }
-    
+
+        .task-controls,
+        .checkmark,
+        .delete-icon {
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
         .task-controls {
             position: absolute;
-            display: flex;
             right: 15px;
-            align-items: center;
         }
-    
+
         .checkmark {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: rgba(217, 217, 217, 0.05);
+            background: $gray-light;
             margin: 0 10px 0 0;
-            font-size: 24px;
+            font-size: 1.5rem;
             color: transparent;
             border-radius: 50%;
             padding: 5px;
             transition: all 0.1s ease-in-out;
             cursor: pointer;
-            position: relative;
-    
+
             &:hover {
-                background: rgba(217, 217, 217, 0.1);
+                background: $gray-light-hover;
             }
-    
+
             &:active {
-                background: rgba(217, 217, 217, 0.2);
+                background: $gray-light-active;
             }
         }
-    
+
         .delete-icon {
-            font-size: 24px;
+            font-size: 1.5rem;
             padding: 5px;
             transition: all 0.1s ease-in-out;
             border-radius: 50%;
-    
+
             &:hover {
                 cursor: pointer;
-                background: rgba(217, 217, 217, 0.1);
+                background: $gray-light-hover;
             }
-    
+
             &:active {
-                background: rgba(217, 217, 217, 0.2);
+                background: $gray-light-active;
             }
         }
-    
-        &:nth-child(n+2) {
+
+        &:nth-child(n + 2) {
             margin-top: 10px;
         }
     }
-
 }
